@@ -10,8 +10,8 @@ import java.util.stream.IntStream;
 import static java.util.UUID.randomUUID;
 
 public class CustomerService {
-    private static final Faker faker = new Faker(Locale.of("RU"));
-     final List<Customer> customers = new ArrayList<>();
+    private static final Faker faker = new Faker(new Locale("RU"));
+    final List<Customer> customers = new ArrayList<>();
 
     public List<String> getAllCustomerNames() {
         return customers.stream().map(Customer::getName).sorted().toList();
